# api/handlers/user/get_user.go
@@ -16,15 +16,14 @@ type GetUserHandler struct {
 	userRepo user.Repository
 }
 
-// Handle ユーザーを取得します。GamersNoteIDで検索します。
+// Handle ユーザーを取得します。Usernameで検索します。
 func (h GetUserHandler) Handle(params o.GetUserParams) middleware.Responder {
-	// u, err := h.usersRepo.GetUserByGamersNoteID(params.GamersnoteID)
-	// if err != nil {
-	// 	return o.NewGetUserDefault(500)
-	// }
-	// if u == nil {
-	// 	return o.NewGetUserDefault(404)
-	// }
-	// return o.NewGetUserOK().WithPayload(u.ToModel())
-	return o.NewGetUserOK()
+	u, err := h.userRepo.GetOneByUsername(params.Username)
+	if err != nil {
+		return o.NewGetUserDefault(500)
+	}
+	if u == nil {
+		return o.NewGetUserDefault(404)
+	}
+	return o.NewGetUserOK().WithPayload(u.ToModel())
 }
